--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,8 @@ plugins:
 
 title: A Real-Time Lyrics Alignment System Using Chroma and Phonetic Features for Classical Singing Performance
 description: Jiyun Park, Taegyun Kwon, Sangeon Yong, and Juhan Nam
+
+email: june@kaist.ac.kr
 author:
   name: Jiyun Park
   url: https://laurenceyoon.github.io
