--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ share/python-wheels/
 *.egg
 MANIFEST
 data/winterreise_rt/
+.vscode/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
